# terminal_velocity

./: devbox.json  pyproject.toml
src/terminal_velocity/: notebook.py  tv3.py  urwid_ui.py
